--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.0.1",
   "description": "An invoice management application built with React and Vite.",
-  "author": "Your Name <your.email@example.com>",
+  "author": "ganesh somariganesh@gmail.com",
   "keywords": [
     "invoice",
     "management",
@@ -21,11 +21,13 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@fontsource/roboto": "^5.1.1",
-    "@mui/icons-material": "^6.4.0",
-    "@mui/material": "^6.4.0",
+    "@mui/icons-material": "^6.4.2",
+    "@mui/material": "^6.4.2",
+    "@reduxjs/toolkit": "^2.5.1",
     "js-cookie": "^3.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^6.28.2",
     "styled-components": "^6.1.14",
     "uuid": "^11.0.5"
