--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@mui/icons-material": "^6.4.2",
     "@mui/material": "^6.4.2",
     "@reduxjs/toolkit": "^2.5.1",
+    "firebase": "^11.4.0",
     "js-cookie": "^3.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
